--- a/public/index.html
+++ b/public/index.html
@@ -154,9 +154,12 @@
     <script>
       var socket = io();
       var currentArea = "login";
-      // var jitsiApi; // 화상채팅 jitsi API 전역변수로 설정
+      var jitsiApi; // 화상채팅 jitsi API 전역변수로 설정
       var loginInfo; // {name, img}로 구성, client단에서 자신의 nickname과 img 접근하게 하기위함
     </script>
+
+<script src="https://meet.jit.si/external_api.js"></script>
+
 
     <script src="./js/login.js"></script>
     <script src="./js/lobby.js"></script>
